fix sql conection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,28 @@ services:
       - .:/code
     environment:
       FLASK_ENV: development
+
   redis:
     image: "redis:alpine"
+
+  database:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    hostname: database
+    restart: always
+    volumes:
+      - ./filesystem/mysql:/var/lib/mysql
+    ports:
+      - 3306:3306
+    environment:
+      TZ: "America/Argentina/Buenos_Aires"
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: flask
+      MYSQL_USER: flask
+      MYSQL_PASSWORD: password
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
