--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,22 @@
 /.backoffice
 /.backoffice/*
 /env
+
+*/config/development
+*/logs/log-*.php
+!*/logs/index.html
+*/cache/*
+!*/cache/index.html
+!*/cache/.htaccess
+
+user_guide_src/build/*
+user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
+user_guide_src/cilexer/pycilexer.egg-info/*
+
+#codeigniter 3
+backoffice/application/logs/*
+!application/logs/index.html
+!application/logs/.htaccess
+backoffice/vendor/
+backoffice/config.php
